# FalloutOS

./: .gitlab-ci.yml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
fallout_executor/: Cargo.toml
fallout_executor/src/: executor.rs  keyboard.rs  lib.rs  simple_executor.rs
fallout_interrupt/: Cargo.toml
fallout_interrupt/src/: gdt.rs  handlers.rs  idt.rs  lib.rs
fallout_memory/: Cargo.toml
fallout_memory/src/: frame_allocator.rs  lib.rs
fallout_memory/src/allocator/: linked_list.rs  mod.rs
fallout_vga_buffer/: Cargo.toml
fallout_vga_buffer/src/: lib.rs
lib/interrupt/: Cargo.toml
lib/interrupt/src/: gdt.rs  handlers.rs  hardware.rs  lib.rs
lib/memory/: Cargo.toml
lib/memory/src/: frame_allocator.rs
lib/qemu/: Cargo.toml
lib/qemu/src/: lib.rs  serial.rs
lib/test_framework/: Cargo.toml
lib/test_framework/src/: lib.rs
lib/vga_buffer/: Cargo.toml
lib/vga_buffer/src/: lib.rs  macros.rs
src/: main.rs  panic.rs  tests.rs  vga_buffer.rs
src/executor/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  task.rs
src/interrupt/: gdt.rs  handlers.rs  idt.rs  mod.rs
src/memory/: frame_allocator.rs  mod.rs
src/memory/allocator/: bump.rs  linked_list.rs  mod.rs
src/tasks/: keyboard.rs  mod.rs
src/vga/: macros.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
