[package]
name = "fallout_os"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "fallout_executor",
    "fallout_interrupt",
    "fallout_memory",
]

[dependencies]
x86_64 = "0.13.1"
pc-keyboard = "0.5.1"
toogle = "0.1.1"
volatile = "0.2"
vga_buffer_rs = "0.1"
spin = "0.7"

[dependencies.futures-util]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.bootloader]
version = "0.9.11"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.memory]
path = "./fallout_memory/"

[dependencies.executor]
path = "./fallout_executor/"

[dependencies.interrupt]
path = "./fallout_interrupt/"

[dependencies.fallout_qemu]
path = "./lib/qemu/"

[dependencies.fallout_testing_framework]
path = "./lib/test_framework/"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 60

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
