[package]
name = "fallout_os"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.13"
pc-keyboard = "0.5"
toogle = "0.1"
volatile = "0.2"
pic8259_simple = "0.2"
spin = "0.7"

[dependencies.vga_buffer_rs]
version = "0.1"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.fallout_qemu]
path = "./lib/qemu/"

[dependencies.fallout_testing_framework]
path = "./lib/test_framework/"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 60

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
