[package]
name = "executor"
version = "0.1.0"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.13.1"

[dependencies.crossbeam-queue]
version = "0.3.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.1"
default-features = false

[dependencies.futures-util]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.vga_buffer]
path = "../fallout_vga_buffer/"

