[package]
name = "interrupt"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.7"
x86_64 = "0.13.1"
pic8259_simple = "0.2.0"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.vga_buffer]
path = "../fallout_vga_buffer/"

[dependencies.executor]
path = "../fallout_executor/"
