[package]
name = "fallout_memory"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.12"

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[dependencies.fallout_vga_buffer]
path = "../vga_buffer/"
