[package]
name = "fallout_qemu"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.12"
spin = "0.5"
uart_16550 = "0.2"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]
