[package]
name = "fallout_qemu"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.13.4"
spin = "0.9.0"
uart_16550 = "0.2.12"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
