[package]
name = "fallout_testing_framework"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

[dependencies.fallout_vga_buffer]
path = "../vga_buffer/"

[dependencies.fallout_qemu]
path = "../qemu/"
