[package]
name = "fallout_testing_framework"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[dependencies.vga_buffer]
path = "../../fallout_vga_buffer/"

[dependencies.interrupt]
path = "../../fallout_interrupt/"

[dependencies.fallout_qemu]
path = "../qemu/"
