[package]
name = "fallout_testing_framework"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bootloader]
version = "0.9.16"
features = ["map_physical_memory"]

[dependencies.fallout_qemu]
path = "../qemu/"
