[package]
name = "fallout_vga_buffer"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.12"
volatile = "0.2.6"
spin = "0.5"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

